maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:50: error: '=' expected but identifier found.
def check(x:Int,y:Int,sol:Int):=Boolean{
                              ^ShortestPathMaze:77: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^